# FileHandlerPro

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
fileapp/: forms.py  models.py  urls.py  views.py
fileapp/migrations/: 0001_initial.py
fileapp/templates/fileapp/: upload_file.html
fileproject/: celery.py  settings.py  urls.py
fileproject/fileproject/: asgi.py  settings.py  urls.py  wsgi.py
media/uploads/: comandos_manjaro_zF2oExn.txt
